--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.3",
+    "axios": "^1.8.4",
+    "framer-motion": "^12.7.3",
     "react": "^19.0.0",
+    "react-d3-speedometer": "^3.1.1",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.0",
+    "react-use-measure": "^2.1.7",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
