--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.8.4",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.7.3",
+    "lazy": "^1.0.11",
     "react": "^19.0.0",
     "react-d3-speedometer": "^3.1.1",
     "react-dom": "^19.0.0",
