--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,6 +5,7 @@ description = "FastAPI backend for LOPT"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "decord>=0.6.0",
     "dotenv>=0.9.9",
     "fastapi[standard]>=0.115.12",
     "networkx==3.4.1",
