--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.5.0",
     "framer-motion": "^12.7.3",
     "lazy": "^1.0.11",
+    "lenis": "^1.2.3",
     "react": "^19.0.0",
     "react-d3-speedometer": "^3.1.1",
     "react-dom": "^19.0.0",
