--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react": "^19.0.0",
     "react-d3-speedometer": "^3.1.1",
     "react-dom": "^19.0.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-router": "^7.5.0",
     "react-use-measure": "^2.1.7",
     "tailwindcss": "^4.1.3"
